--- a/Course2/Course2.csproj
+++ b/Course2/Course2.csproj
@@ -29,6 +29,9 @@
     <None Update="sources\ElectricalConsumers.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="sources\Template.docx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="sources\Transformers.xlsx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
